# MUSIBLE_OpenCV

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MUSIBLE_OpenCV  Makefile  Readme.md  cmake_install.cmake  main.cpp
include/: Braille.h
includes/: Braille.h
