CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( MUSIBLE_OpenCV )
FIND_PACKAGE( OpenCV REQUIRED )
INCLUDE_DIRECTORIES ( Braille.h )
ADD_EXECUTABLE( MUSIBLE_OpenCV main.cpp )
TARGET_LINK_LIBRARIES( MUSIBLE_OpenCV ${OpenCV_LIBS} )
target_include_directories(MUSIBLE_OpenCV PUBLIC ${CMAKE_SOURCE_DIR}/includes)